# SnakeOpenGL

SnakeOpenGL/: CMakeLists.txt  game.cpp  game.h  main.cpp
